@@ -8,11 +8,7 @@ case $1 in
 		cd /etc
 		rm -f make.profile
 		
-		ln -sf ../usr/portage/profiles/hardened-${MAINARCH}-${MAINVERSION} make.profile
-		if [ -n ${CCACHE} ]
-		then
-			emerge --oneshot --nodeps --usepkg --buildpkg --noreplace ccache || exit 1
-		fi
+		ln -sf /usr/portage/profiles/hardened-${MAINARCH}-${MAINVERSION} make.profile
 		export ROOT=${2}
 		install -d $ROOT
 		for x in $(/tmp/build.sh ${MAINARCH}-${MAINVERSION})
