@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.19 2003/10/02 17:46:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.20 2003/10/05 02:06:16 zhen Exp $
 
 # source the config file
 VERSION="1.3"
@@ -437,7 +437,7 @@ build() {
 			cp ${BASEDIR}/bin/stage1 ${CHROOTDIR}/tmp
 			cp ${BASEDIR}/bin/build.sh ${CHROOTDIR}/tmp
 			#CHOST is for the gcc-config initialization step
-			export MAINVERSION MAINARCH CHOST CCACHE
+			export MAINVERSION MAINARCH CHOST
 			#get our make.conf instide our new tree
 			#good idea because make.conf should be there.
 			#also necessary because the "stage1" script runs gcc-config, which
