@@ -1,6 +1,11 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.7 2003/10/02 17:46:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.8 2003/10/05 02:06:16 zhen Exp $
+
+  04 Oct 2003; zhen <zhen@gentoo.org> catalyst, bin/bootstrap.sh, bin/stage1:
+  removed ccache support from catalyst stage1 build cause it breaks the build.
+  Additionally, I removed gettext support from bootstrap, because according to
+  our new default profile, we don't use that anymore.
 
   02 Oct 2003; zhen <zhen@gentoo.org> catalyst, files/catalyst.conf:
   added a new var, BUILDTYPE, adding more transparency for building.
